08 Aug 2018
update: show poster, banner, background images, IMDb info in requests.php, offers.php, upload.php when using valid IMDb url and images are available
fix: allow anything class UC_UPLOADER and above to upload
fix: after upload multiple images to bitbucket, you can select any link correctly

07 Aug 2018
fix: write_css_class()
move: all delete torrent functions to Torrents Class
add: IMDb lookup on upload.php
add: ISBN lookup on upload.php
remove: unneeded link to google fonts AJAXChatTemplate.php
fix: Tooltips
fix: overwrite key browse_js uglify.php
update: write_classes() to write chat/js/config bbCodeTags

06 Aug 2018
fix: clear index page user blocks when edit any user
fix: missing staff_picks mytorrents.php

05 Aug 2018
fix: countable AJAX Chat
fix: path to up.gif torrenttable_functions.php
move: find images in details.php to function_get_images.php
update: allow : in torrent name
add: verify file is actually an image ImageProxy.php
move: background-16 to default.css
add: attribution to colorpicker.js
fix: get correct page/post when post count greater than per page
fix: AJAX Chat stats
fix: bluray releases
fix: admin user delete account
fix: admin account manage delete user account
fix: promise exception AJAX Chat
add: animation to flipper
move: flipper to seaparate file
move: navbar to separate file
add: apis block to enable/disable individual apis

03 Aug 2018
update: set cache for failed apis to limit retries
add: Staff Picks
fix: delete cache when updating bonus
fix: adminer

02 Aug 2018
fix: invalid date birthday.php
fix: remember token getting deleted when flush cache
fix: AJAX Chat ban user
fix: string literals announce.php
fix: trivia showing icons
fix: schema for cheaters userip
update: jquery remove to fade out

01 Aug 2018
fix: typo lang_torrenttable_functions.php
fix: use correct key for userid news.php

31 Jul 2018
fix: typo bbcode_functions.php and anatomy.php
fix: typo takeedit.php
fix: return false if $image is empty bittorent.php
